[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Minimal RAG pipeline with chunking, vector search, retrieval and generation"
requires-python = ">=3.9"
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
